name:           MultiConduits
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         bjoeris

executable MultiConduits
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   conduit,
                   void,
                   transformers
  ghc-options:     -Wall
  other-modules:   ConduitUtil

